--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,4 +1,57 @@
-<a href="{{ url_for('logout') }}">logout</a><br>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Chat</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{url_for('static', filename='css/chat.css')}}">
+  <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script> -->
+  <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
+</head>
+<body>
+  <nav class="navbar navbar-dark fixed-top navbar-fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand"></a>
+      <!-- Navbar content -->
+      <div class="dropdown">
+        <button class="navbar-toggler" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" aria-labelledby="dropdownMenuButton">
+            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li><a class="dropdown-item" href="#">My Plan</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a></li>
+          </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="fixed-sidebar pt-1 p-2">
+    <!-- Sidebar content -->
+    <a href="{{ url_for('create_chat') }}" class="btn btn-secondary w-100 my-3 text-color">+ New Chat</a>
+    <ul class="list-group list-group-flush text-white" id="chat-list">
+        {% for chat in my_chats %}
+        <li class="mb-2"><a type="button" class="chat-btn btn btn-outline-secondary w-100 text-start" href="{{url_for('view_chat', chat_id=chat.id)}}">{{ chat.name }}</a></li>
+        {% else %}
+            <li>You have no chats yet.</li>
+        {% endfor %}
+    </ul>
+  </div>
+</div>
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
+
+
+
+
+<!-- <a href="{{ url_for('logout') }}">logout</a><br>
 <br>
 <h1>Chats for {{ name }}</h1>
 <ul>
@@ -9,4 +62,4 @@
     {% endfor %}
 </ul>
 
-<a href="{{ url_for('create_chat') }}">Create New Chat</a>
+<a href="{{ url_for('create_chat') }}">Create New Chat</a> -->
