--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@
         <div class="centered-form-container">
             <div class="form-signin">
                 <form action="{{ url_for('register') }}" method="post">
-                    <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
+                    <h1 class="h3 mb-3 fw-normal text-center">Sign Up</h1>
                     {{ form.hidden_tag() }}
                     <div class="form-floating mb-3">
                         {{ form.email(class="form-control", id="floatingInput") }}
@@ -31,9 +31,9 @@
                       <!-- <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password" required="required"> -->
                       <label for="floatingPassword">Password</label>
                     </div>
-                    {{ form.submit(class="w-100 btn btn-lg btn-primary") }}
+                    {{ form.submit(class="w-100 btn btn-lg button-color") }}
                     <div class="mt-4 text-center">
-                      You have an account! <a href="{{ url_for('login')}}" class="link-primary">Sign In</a>
+                      You have an account! <a href="{{ url_for('login')}}" class="text-color">Sign In</a>
                     </div>
                 </form>
             </div>
