--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,65 +1,128 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chat</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>{% if chat is defined and chat.name %}{{ chat.name }}{% else %}BoxBox{% endif %}</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="{{url_for('static', filename='css/chat.css')}}">
-  <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script> -->
-  <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
 </head>
+
 <body>
   <nav class="navbar navbar-dark fixed-top navbar-fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand"></a>
       <!-- Navbar content -->
       <div class="dropdown">
-        <button class="navbar-toggler" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="navbar-toggler" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+          aria-expanded="false">
           <span class="navbar-toggler-icon"></span>
         </button>
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" aria-labelledby="dropdownMenuButton">
-            <li><a class="dropdown-item" href="#">Settings</a></li>
-            <li><a class="dropdown-item" href="#">My Plan</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a></li>
-          </ul>
+        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" aria-labelledby="dropdownMenuButton">
+          <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#settingsModal">Settings</a>
+          </li>
+          <li><a class="dropdown-item disabled" aria-disabled="true">My Plan</a></li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li><a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a></li>
+        </ul>
       </div>
     </div>
   </nav>
+
+  <!-- Settings Modal -->
+  <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="settingsModalLabel">Settings</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <!-- Settings form or content goes here -->
+          Your settings content here.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="fixed-sidebar pt-1 p-2">
     <!-- Sidebar content -->
-    <a href="{{ url_for('create_chat') }}" class="btn btn-secondary w-100 my-3 text-color">+ New Chat</a>
+    <a href="{{ url_for('create_chat') }}" class="btn btn-secondary w-100 my-3 text-color">New Chat</a>
     <ul class="list-group list-group-flush text-white" id="chat-list">
-        {% for chat in my_chats %}
-        <li class="mb-2"><a type="button" class="chat-btn btn btn-outline-secondary w-100 text-start" href="{{url_for('view_chat', chat_id=chat.id)}}">{{ chat.name }}</a></li>
-        {% else %}
-            <li>You have no chats yet.</li>
-        {% endfor %}
+      {% for chat in my_chats %}
+      <li class="mb-2">
+        <a type="button"
+          class="chat-btn btn btn-outline-secondary w-100 text-start {% if chat.id == current_chat_id %}active{% endif %}"
+          href="{{ url_for('my_chats', chat_id=chat.id) }}">
+          {{ chat.name }}
+        </a>
+      </li>
+      {% else %}
+      <li>You have no chats yet.</li>
+      {% endfor %}
     </ul>
   </div>
-</div>
-
-
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
-
-
-
-
-<!-- <a href="{{ url_for('logout') }}">logout</a><br>
-<br>
-<h1>Chats for {{ name }}</h1>
-<ul>
-    {% for chat in my_chats %}
-        <li><a href="{{url_for('view_chat', chat_id=chat.id)}}">{{ chat.name }}</a></li>
+  <!---------------Display messages in the chat-->
+  <div class="main-content">
+    {% if chat %}
+    <div id="messages">
+      <br>
+      {% for message in messages %}
+      <div class="{% if message.sender == 'user' %}
+                      user-message
+                      {% elif message.sender == 'gemini' %}
+                      gemini-message
+                      {% elif message.sender == 'gpt3_5' %}
+                      gpt3_5-message
+                      {% endif %}">
+        {% if message.sender == 'user' %}
+        User: {{ message.content}}
+        {% elif message.sender == 'gemini' %}
+        Gemini: {{ message.content }}
+        {% elif message.sender == 'gpt3_5' %}
+        Gpt-3.5: {{ message.content }}
+        {% else %}
+        {{ message.content }}
+        {% endif %}
+      </div>
+      {% endfor %}
+    </div>
+    <div class="chat-input-container">
+      <div class="input-group chat-container">
+        <textarea type="text" class="form-control prompt-input" id="messageInput" placeholder="Ask BoxBox..."
+          aria-describedby="button-addon2"></textarea>
+        <button class="btn button-color prompt-send" type="button" id="sendButton">
+          <img src="{{ url_for('static', filename='images/icons/send-white.svg') }}" class="send-icon" alt="Send"
+            style="fill: white;">
+        </button>
+      </div>
+    </div>
     {% else %}
-        <li>You have no chats yet.</li>
-    {% endfor %}
-</ul>
+    <div class="no-chat-selected">
+      <h1 class="text-color-h">Hi, {{name.title()}}</h1>
+      <p>No chat selected yet. Choose a chat from the sidebar to get started!</p>
+    </div>
+    {% endif %}
+  </div>
 
-<a href="{{ url_for('create_chat') }}">Create New Chat</a> -->
+
+  <script type="text/javascript">
+    var chatId = "{{ chat.id }}";
+  </script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
+  <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
