--- a/templates/register.html
+++ b/templates/register.html
@@ -4,13 +4,13 @@
 <p>{{ message }}</p>
 {% endfor %}
 
-<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh; background-color: #343a40">
     <div class="form-signin w-100" style="max-width: 350px;">
         <!-- Your form content -->
         <div class="centered-form-container">
             <div class="form-signin">
                 <form action="{{ url_for('register') }}" method="post">
-                    <h1 class="h3 mb-3 fw-normal text-center">Sign Up</h1>
+                    <h1 class="h3 mb-3 fw-normal text-center text-white">Sign Up</h1>
                     {{ form.hidden_tag() }}
                     <div class="form-floating mb-3">
                         {{ form.email(class="form-control", id="floatingInput") }}
@@ -28,7 +28,7 @@
                       <label for="floatingPassword">Password</label>
                     </div>
                     {{ form.submit(class="w-100 btn btn-lg button-color") }}
-                    <div class="mt-4 text-center">
+                    <div class="mt-4 text-center text-white">
                       You have an account! <a href="{{ url_for('login')}}" class="text-color">Sign In</a>
                     </div>
                 </form>
