--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,27 +3,27 @@ body {
   }
   .custom-outline {
     color: #ffffff;
-    border: 1px solid #00A19C;
+    border: 1px solid #00C5C8;
     background-color: transparent;
   }
   
   .custom-outline:hover {
     color: #000000;
-    background-color: #00A19C;
-    border-color: #00A19C;
+    background-color: #00C5C8;
+    border-color: #00C5C8;
   }
   .button-color{
-    background-color: #00A19C;
+    background-color: #00C5C8;
     color: white;
   }
   .button-color:hover{
-    background-color: #00A19C;
+    background-color: #00C5C8;
     color: white;
   }
   .text-color{
-    color: #00A19C;
+    color: #00C5C8;
   }
   .text-color:hover{
-    color: #ffffff;
+    color: #000000;
   }
   
