--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,24 @@
-{% extends 'base.html' %}
-<style>
-  body {
-    background-color: #000000; /* This is a light gray color, adjust the hex code to the shade of gray you prefer */
-  }
-</style>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>BoxBox</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+</head>
 
 
 {% block content %}
 {% for message in get_flashed_messages() %}
 <p>{{ message }}</p>
 {% endfor %}
-<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh; background-color: #343a40">
+<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
     <div class="form-signin w-100" style="max-width: 350px;">
         <!-- Your form content -->
         <div class="centered-form-container">
             <div class="form-signin">
                 <form action="{{ url_for('login')}}" method="post">
-                    <h1 class="h3 mb-3 fw-normal text-center text-white">Sign In</h1>
+                    <h1 class="h3 mb-3 fw-normal text-center">Sign In</h1>
                     {{ form.hidden_tag() }}
                     <div class="form-floating mb-3">
                         {{ form.email(class="form-control") }}
@@ -31,7 +33,7 @@
                         <a href="#" class="text-color">Forgot your password?</a>
                       </div>
                       {{ form.submit(class="w-100 btn btn-lg button-color") }}
-                    <div class="mt-4 text-center text-white">
+                    <div class="mt-4 text-center">
                         Don't have an account? <a href="{{url_for('register')}}" class="text-color">Sign Up</a>
                       </div>
                       
