--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -3,31 +3,21 @@ html {
   overflow: hidden;
   height: 100%;
   margin: 0;
-  background-color: #343a40;
+  background-color: #212529;
 }
 
 /*********************  Navbar  *******************************/
-.fixed-sidebar {
-  height: 100%;
-  overflow-y: auto;
-  position: fixed;
-  width: 18%;
-  background-color: #010101;
-  z-index: 1030;
+.navbar-fixed-top {
+  background-color: #212529;
+  z-index: 1010;
 }
 
+/*********************  Chats  *******************************/
 .chat-content {
   margin-left: 20%;
   height: 100%;
   overflow-y: auto;
 }
-
-.navbar-fixed-top {
-  background-color: #343a40;
-  z-index: 1010;
-}
-
-/*********************  Chats  *******************************/
 .main-content {
   display: flex;
   margin: auto;
@@ -51,15 +41,18 @@ html {
   margin-bottom: 10px;
 }
 
-
-
 .user-message {
-  /* border: 1px solid white; */
   background-color: #00000070;
   color: #ffffff;
   padding: 5px;
   margin-bottom: 5px;
   border-radius: 5px;
+}
+
+.terminal-prefix{
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
 .gemini-message,
@@ -76,10 +69,14 @@ html {
 .gemini-message pre,
 .gpt3_5-message pre,
 .user-message pre {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
   white-space: pre-wrap;
   overflow-wrap: normal;
   word-break: normal;
 }
+
 
 .chat-input-container {
   position: fixed;
@@ -87,7 +84,7 @@ html {
   left: 0;
   margin-left: 0;
   width: 100%;
-  background-color: #343a40;
+  background-color: #212529;
   padding-bottom: 10px;
   display: flex;
   justify-content: center;
@@ -112,7 +109,7 @@ html {
 
 .prompt-input {
   height: 50px;
-  background-color: #343a40;
+  background-color: #212529;
   color: white;
   border: 1px solid lightgray;
   resize: none;
@@ -126,7 +123,7 @@ html {
 }
 
 .prompt-input:focus {
-  background-color: #343a40;
+  background-color: #212529;
   color: white;
   outline: none;
   border: 1px solid #ffffff;
@@ -158,9 +155,37 @@ html {
 }
 
 /*********************  Sidebar  *******************************/
+.fixed-sidebar {
+  height: 100%;
+  overflow-y: auto;
+  position: fixed;
+  width: 18%;
+  background-color: black;
+  z-index: 1030;
+}
 .chat-item {
   display: flex;
   justify-content: flex-start;
+}
+
+.chat-btn{
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
+  font-size: 1rem;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+  text-decoration: none;
+  border-left: 2px solid gray;
+  border-bottom: 2px solid gray;
+  color: gray;
+}
+.chat-btn:hover{
+  border-left: 2px solid white;
+  border-bottom: 2px solid white;
+  color: white;
 }
 
 .rename-input {
@@ -188,3 +213,16 @@ html {
 .btn-close-white {
   filter: invert(100%);
 }
+
+.boxbox-font{
+  font-family: "Hind", sans-serif;
+  font-weight: 500;
+}
+.new-chat{
+  text-align: left;
+  border: 1px solid white;
+}
+.new-chat:hover{
+  border: 1px solid gray;
+}
+
