--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,241 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>BoxBox - 
-      {% if chat is defined and chat.name %}{{ chat.name }}{% else %}BoxBox{%
-      endif %}
-    </title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="{{url_for('static', filename='css/chat.css')}}"
-    />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>
+    BoxBox - {% if chat is defined and chat.name %}{{ chat.name }}{% else
+    %}BoxBox{% endif %}
+  </title>
 
-  <body>
-    <nav class="navbar navbar-dark fixed-top navbar-fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand"></a>
-        <!-- Navbar content -->
-        <div class="dropdown">
-          <button
-            class="navbar-toggler"
-            type="button"
-            id="dropdownMenuButton"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <span class="navbar-toggler-icon"></span>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="{{url_for('static', filename='css/chat.css')}}" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Hind:wght@300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <nav class="navbar navbar-dark fixed-top navbar-fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand"></a>
+      <!-- Navbar content -->
+      <div class="row">
+        <table class="table table-bordered table-dark my-1">
+          <thead>
+            <tr>
+              <th scope="col">Gemini</th>
+              <th scope="col">GPT-3.5</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+      <div class="dropdown">
+        <button class="navbar-toggler" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" aria-labelledby="dropdownMenuButton">
+          <li>
+            <a class="dropdown-item d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#settingsModal">
+              <img src="{{ url_for('static', filename='images/icons/set-nav.svg') }}" class="mr-2" />
+              Settings
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item disabled d-flex align-items-center" aria-disabled="true">
+              <!-- <img src="{{ url_for('static', filename='images/icons/star.svg') }}" class="mr-2"/> -->
+              My Plan
+            </a>
+          </li>
+          <li>
+            <hr class="dropdown-divider" />
+          </li>
+          <li>
+            <a class="dropdown-item d-flex align-items-center" href="{{ url_for('logout') }}">
+              <img src="{{ url_for('static', filename='images/icons/log-out.svg') }}" class="mr-2" />
+              Log Out
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+  <!-- Settings Modal -->
+  <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content bg-dark">
+        <div class="modal-header" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+          <h5 class="modal-title text-white" id="settingsModalLabel">
+            Settings
+          </h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body bg-dark" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+          <form action="/change-name" method="post">
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" name="new_name" placeholder="New Name"
+                aria-describedby="button-addon2" />
+              <button class="btn button-color" type="submit" id="button-addon2">Save</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Sidebar content -->
+  <div class="fixed-sidebar pt-1 p-2">
+    <h3 class="d-flex my-2 justify-content-center align-items-center text-white boxbox-font">
+      BoxBox
+    </h3>
+    <a href="{{ url_for('create_chat') }}" class="btn w-100 mb-2 text-white new-chat">+ New Chat</a>
+    <ul class="list-group list-group-flush text-white" id="chat-list">
+      {% for chat in my_chats %}
+      <li class="mb-2 d-flex justify-content-between align-items-center chat-item">
+        <input type="text" class="rename-input form-control d-none" id="rename-input-{{chat.id}}"
+          data-chat-id="{{chat.id}}" />
+        <a id="chat-btn-{{chat.id}}"
+          class="chat-btn flex-grow-1 my-1 text-start {% if chat.id == current_chat_id %}active{% endif %}"
+          href="{{ url_for('my_chats', chat_id=chat.id) }}" {% if chat.id==current_chat_id %}
+          style="color: white; border-left-color: white; border-bottom-color: white;" {% endif %}>{{ chat.name }}</a>
+
+
+        <!--------------------Chat Settings Dropdown --------------------->
+        <div class="btn-group">
+          <button type="button" class="settings-button" style="outline: none; box-shadow: none"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="{{ url_for('static', filename='images/icons/settings.svg') }}" />
           </button>
-          <ul
-            class="dropdown-menu dropdown-menu-end dropdown-menu-dark"
-            aria-labelledby="dropdownMenuButton"
-          >
+          <ul class="dropdown-menu bg-dark">
             <li>
-              <a
-                class="dropdown-item d-flex align-items-center"
-                data-bs-toggle="modal"
-                data-bs-target="#settingsModal"
-                >
-                <img src="{{ url_for('static', filename='images/icons/set-nav.svg') }}" class="mr-2"/>
-                Settings</a
-              >
+              <a class="dropdown-item text-white d-flex align-items-center" id="rename-btn-{{chat.id}}"
+                onclick="showRenameField('{{chat.id}}', '{{ chat.name | escape  }}')">
+                <img src="{{ url_for('static', filename='images/icons/edit.svg') }}" class="mr-2" />Rename</a>
             </li>
             <li>
-              <a class="dropdown-item disabled d-flex align-items-center" aria-disabled="true">
-                <!-- <img src="{{ url_for('static', filename='images/icons/star.svg') }}" class="mr-2"/> -->
-                My Plan</a>
+              <hr class="dropdown-divider bg-secondary" />
             </li>
             <li>
-              <hr class="dropdown-divider" />
-            </li>
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="{{ url_for('logout') }}"
-                >
-                <img src="{{ url_for('static', filename='images/icons/log-out.svg') }}" class="mr-2"/>
-                Log Out</a
-              >
+              <a class="dropdown-item text-danger d-flex align-items-center delete-chat" href="#"
+                data-chat-id="{{chat.id}}">
+                <img src="{{ url_for('static', filename='images/icons/trash.svg') }}" class="mr-2" />Delete Chat
+              </a>
             </li>
           </ul>
         </div>
-      </div>
-    </nav>
+      </li>
 
-    <!-- Settings Modal -->
-    <div
-      class="modal fade"
-      id="settingsModal"
-      tabindex="-1"
-      aria-labelledby="settingsModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-dark">
-          <div class="modal-header">
-            <h5 class="modal-title text-white" id="settingsModalLabel">Settings</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body bg-dark">
-            <form action="/change-name" method="post">
-              <div class="input-group mb-3">
-                <input type="text" class="form-control" name="new_name" placeholder="New Name" aria-describedby="button-addon2">
-                <button class="btn btn-outline-secondary button-color" type="submit" id="button-addon2">Save</button>
-              </div>
-          </form>
-        </div>
-        </div>  
-      </div>
-    </div>
+      {% else %}
+      <li>You have no chats yet.</li>
+      {% endfor %}
+    </ul>
+  </div>
 
-    <!-- Sidebar content -->
-    <div class="fixed-sidebar pt-1 p-2">
-      <h2 class="d-flex justify-content-center align-items-center text-white">BoxBox</h2>
-      <a
-        href="{{ url_for('create_chat') }}"
-        class="btn btn-secondary w-100 my-3 text-color"
-        >New Chat</a
-      >
-      <ul class="list-group list-group-flush text-white" id="chat-list">
-        {% for chat in my_chats %}
-        <li
-          class="mb-2 d-flex justify-content-between align-items-center chat-item"
-        >
-          <input
-            type="text"
-            class="rename-input form-control d-none"
-            id="rename-input-{{chat.id}}"
-            data-chat-id="{{chat.id}}"
-          />
-          <a
-            id="chat-btn-{{chat.id}}"
-            class="chat-btn btn btn-outline-secondary flex-grow-1 text-start {% if chat.id == current_chat_id %}active{% endif %}"
-            href="{{ url_for('my_chats', chat_id=chat.id) }}"
-            >{{ chat.name }}</a
-          >
-          <!--------------------Chat Settings Dropdown --------------------->
-          <div class="btn-group">
-            <button
-              type="button"
-              class="settings-button"
-              style="outline: none; box-shadow: none"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <img
-                src="{{ url_for('static', filename='images/icons/settings.svg') }}"
-              />
-            </button>
-            <ul class="dropdown-menu bg-dark">
-              <li>
-                <a
-                  class="dropdown-item text-white d-flex align-items-center"
-                  id="rename-btn-{{chat.id}}"
-                  onclick="showRenameField('{{chat.id}}', '{{ chat.name | escape  }}')"
-                  >
-                  <img src="{{ url_for('static', filename='images/icons/edit.svg') }}" class="mr-2"/>Rename</a
-                >
-              </li>
-              <li>
-                <hr class="dropdown-divider bg-secondary" />
-              </li>
-              <li><a class="dropdown-item text-danger d-flex align-items-center delete-chat" href="#" data-chat-id="{{chat.id}}">
-                <img src="{{ url_for('static', filename='images/icons/trash.svg') }}" class="mr-2"/>Delete Chat
-            </a>
-            
-              </li>
-            </ul>
-          </div>
-        </li>
+  <!---------------Display messages in the chat----------------------->
 
-        {% else %}
-        <li>You have no chats yet.</li>
-        {% endfor %}
-      </ul>
-    </div>
-
-    <!---------------Display messages in the chat----------------------->
-   
-    <div class="main-content">
-      {% if chat %}
-      <div id="messages">
-        <br />
-        {% for message in messages %} {% if message.sender == 'gemini' or
-        message.sender == 'gpt3_5' %}
-        <!-- Assume every gemini message is followed by a gpt3_5 message-->
-        <div class="ai-messages-container justify-content-between">
-          {% if message.sender == 'gemini' %}
-          <div class="gemini-message">
-            <span class="terminal-prefix">Gemini:</span>
-            <pre>{{ message.content }}</pre>
-          </div>
-          {% set next_message = loop.nextitem %} {% if next_message.sender ==
-          'gpt3_5' %}
-          <div class="gpt3_5-message">
-            <span class="terminal-prefix">Gpt-3.5:</span>
-            <pre>{{ next_message.content }}</pre>
-          </div>
-          {% endif %} {% endif %}
-        </div>
-        {% elif message.sender == 'user' %}
-        <div class="user-message">
-          <span class="terminal-prefix">You:</span>
+  <div class="main-content">
+    
+    {% if chat %}
+    <div id="loader" class="spinner-border text-light d-none" role="status">
+      <span class="visually-hidden">Loading...</span>
+  </div>
+    <div id="messages">
+      <br />
+      {% for message in messages %} {% if message.sender == 'gemini' or
+      message.sender == 'gpt3_5' %}
+      <!-- Assume every gemini message is followed by a gpt3_5 message-->
+      <div class="ai-messages-container justify-content-between">
+        {% if message.sender == 'gemini' %}
+        <div class="gemini-message">
+          <span class="terminal-prefix">Gemini:</span>
           <pre>{{ message.content }}</pre>
         </div>
-        {% endif %} {% endfor %}
-      </div>
-      <!-------------------Prompt Input----------------------->
-      <div class="chat-input-container">
-        <div class="input-group chat-container">
-          <textarea
-            type="text"
-            class="form-control prompt-input"
-            id="messageInput"
-            placeholder="Ask BoxBox..."
-            aria-describedby="button-addon2"
-          ></textarea>
-          <button
-            class="btn button-color prompt-send"
-            type="button"
-            id="sendButton"
-          >
-            <img
-              src="{{ url_for('static', filename='images/icons/send-white.svg') }}"
-              class="send-icon"
-              alt="Send"
-            />
-          </button>
+        {% set next_message = loop.nextitem %} {% if next_message.sender ==
+        'gpt3_5' %}
+        <div class="gpt3_5-message">
+          <span class="terminal-prefix">Gpt-3.5:</span>
+          <pre>{{ next_message.content }}</pre>
         </div>
+        {% endif %} {% endif %}
       </div>
-      {% else %}
-      <!-------------------No Open Vhat Middle Text----------------------->
-      <div class="no-chat-selected">
-        <h1 class="text-color-h">Hi, {{name.title()}}</h1>
-        <p>
-          No chat selected yet. Choose a chat from the sidebar to get started!
-        </p>
+      {% elif message.sender == 'user' %}
+      <div class="user-message">
+        <span class="terminal-prefix">You:</span>
+        <pre>{{ message.content }}</pre>
       </div>
-      {% endif %}
+      {% endif %} {% endfor %}
     </div>
+    <!-------------------Prompt Input----------------------->
+    <div class="chat-input-container">
+      <div class="input-group chat-container">
+        <textarea type="text" class="form-control prompt-input" id="messageInput" placeholder="Ask BoxBox..."
+          aria-describedby="button-addon2"></textarea>
+        <button class="btn button-color prompt-send" type="button" id="sendButton">
+          <img src="{{ url_for('static', filename='images/icons/send-white.svg') }}" class="send-icon" alt="Send" />
+        </button>
+      </div>
+    </div>
+    {% else %}
+    <!-------------------No Open Vhat Middle Text----------------------->
+    <div class="no-chat-selected">
+      <h1 class="text-color-h">Hi, {{name.title()}}</h1>
+      <p>
+        No chat selected yet. Choose a chat from the sidebar to get started!
+      </p>
+    </div>
+    {% endif %}
+  </div>
 
+  <!-------------------Scripts File----------------------->
+  <script type="text/javascript">
+    var chatId = "{{ chat.id }}";
+  </script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
+  <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
 
-    <!-------------------Scripts File----------------------->
-    <script type="text/javascript">
-      var chatId = "{{ chat.id }}";
-    </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
-    <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
